--- a/loos.dox
+++ b/loos.dox
@@ -25,6 +25,7 @@ Our email address has changed.  Please use loos.maintainer@gmail.com to contact 
       -  Download a LOOS release from <a href="http://sourceforge.net/projects/loos">Sourceforge</a> or <a href="https://github.com/GrossfieldLab/loos/releases">GitHub</a>
       - <a href="https://github.com/GrossfieldLab/loos">Clone LOOS from GitHub</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the announcements mailing list</a>
+      - <a href="https://github.com/GrossfieldLab/loos/wiki">Online tutorials and documentation</a>
       -  <a href="http://sourceforge.net/projects/loos/files/loos%20material/loos_talk_2013_2.pdf/download">Download a tutorial (pdf) on using LOOS</a>
       -  Ask the developers a question at loos.maintainer@gmail.com or by posting to one of the mailing lists.
       - \subpage building "Building LOOS"
