--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
+2018-02-02 <alan>
+	* Bugfix in order_params to allow selecting chain 1
+	
 2018-01-10 <alan>
 	* Added new tool (distance_prob)
-	
+
 2017-11-02 <tromo>
 	* Changed SConsctruct and support scripts to make print a function (required by scons-3.0.0)
 
