--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-10-26  Alan Grossfield <alan>
+
+	* Added new option --postcenter to merge_traj, to improve reimaging in
+	  challenging cases.
+
 2018-10-18  Alan Grossfield <alan>
 
 	* Major change in order_params. A previous change to take the absolute value
