--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-11-01  Alan Grossfield <alan>
+	* Added --postcenter-xy and postcenter-z to merge-traj.  Updated fullhelp
+	  to include a better explanation of when you might need these methods.
 
 2018-10-26  Alan Grossfield <alan>
 
